@@ -1834,7 +1834,7 @@ static UV znlog_ph(UV a, UV g, UV p, UV p1) {
     fac[i] = znlog_solve( delta, gamma, p, znorder(gamma,p) );
     exp[i] = pi;
   }
-  if (chinese(&x, fac, exp, nfactors) == 1 && powmod(g, x, p) == a)
+  if (chinese(&x, 0, fac, exp, nfactors) == 1 && powmod(g, x, p) == a)
     return x;
   return 0;
 }
