@@ -49,7 +49,7 @@ extern UV modinverse(UV a, UV p);              /* Returns 1/a mod p */
 extern UV divmod(UV a, UV b, UV n);            /* Returns a/b mod n */
 extern UV gcddivmod(UV a, UV b, UV n);         /* divmod(a/gcd,b/gcd,n) */
 
-extern int chinese(UV *r, UV* a, UV* n, UV num); /* Chinese Remainder */
+extern int chinese(UV *r, UV *lcm, UV* a, UV* n, UV num);/* Chinese Remainder */
 
 /* Do the inverse for a negative modular power / root. a^-k => (1/a)^k mod n */
 extern int prep_pow_inv(UV *a, UV *k, int kstatus, UV n);
