@@ -100,6 +100,7 @@ Revision history for Perl module Math::Prime::Util
     - nth_lucky_approx(n)             fast approximate nth lucky number
     - nth_lucky_lower(n)              fast nth lucky number lower bound
     - nth_lucky_upper(n)              fast nth lucky number upper bound
+    - chinese2([a1,m1],[a2,m2],...)   CRT returning (solution,modulus)
 
     [FIXES]
 
